--- a/locales/base.pot
+++ b/locales/base.pot
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-11 21:35+0000\n"
+"POT-Creation-Date: 2021-02-13 21:07+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,11 +15,12 @@ msgstr ""
 "Generated-By: pygettext.py 1.5\n"
 
 
-#: acb.py:18
-msgid "Assassin's Creed: Brotherhood Setup Manager Tool"
+#: acb.py:72
+msgid ""
+"Choose a language\n"
 msgstr ""
 
-#: acb.py:25
-msgid "Hello World"
+#: acb.py:91
+msgid "Assassin's Creed: Brotherhood Setup Manager Tool"
 msgstr ""
 
