--- a/locales/pt/LC_MESSAGES/base.po
+++ b/locales/pt/LC_MESSAGES/base.po
@@ -5,17 +5,22 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-11 20:49+0000\n"
+"POT-Creation-Date: 2021-02-13 21:07+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Português<LL@li.org>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: pygettext.py 1.5\n"
 
 
-#: acb.py:14
+#: acb.py:72
+msgid ""
+"Choose a language\n"
+msgstr "Escolha uma língua\n"
+
+#: acb.py:91
 msgid "Assassin's Creed: Brotherhood Setup Manager Tool"
-msgstr "Assassin's Creed: Brotherhood Ferramenta de Configuração"
+msgstr "Assassin's Creed Brotherhood Ferramenta de Gestão"
 
